Update new username and password

--- a/Configuration/config.properties
+++ b/Configuration/config.properties
@@ -1,5 +1,5 @@
 baseURL=https://www.demo.guru99.com/V4/
-username=mngr502803
-password=EgUgumy
+username=mngr515202
+password=usYrumy
 chromepath=./Drivers\\chromedriver.exe
 firefoxpath=./Drivers\\geckodriver.exe
